apps/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-data-pvc
