apps/sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  type: ClusterIP
  ports: 
  - name: web
    protocol: TCP
    port: 8989
    targetPort: 8989
