apps/sonarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - 'sonarr.home.southcity.dev'
    secretName: sonarr-cert
  rules:
  - host: sonarr.home.southcity.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sonarr
            port:
              name: web
